# glassbox-llms

./: .gitignore  README.md  interventions.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
cot_faithfulness/: README.md  __init__.py  baselines.py  demo.ipynb  evaluator.py  requirements.txt  tests.py
docs/: DEMO_FINALIZATION_PLAN.md  PRODUCT_VISION.md  PROJECT_STATUS.md  design_doc.md  glassbox_roadmap.md  interpretability_methods.md  introduction.md
examples/: end_to_end_pipeline.py  full_pipeline_demo.py  generate_demo_artifacts.py  generate_synthetic_demo.py  render_showcase.sh
examples/probes/: README.md
examples/sae_feature/: README.md  __init__.py  dataset.py  decoder_analysis.py  max_activating_examples.py
examples/visualization/: circuit_graph_animation.py  (+4 more)
glassboxllms/: __init__.py  pipeline.py  requirements.txt
notebooks/: CausalScrubber.ipynb  attention_visualization.ipynb  cot_faithfulness.ipynb  cot_faithfulness_demo.ipynb  embedding_visualization.ipynb  glassbox_demo.ipynb  hookManager.ipynb  interpretability_for_modernLLMs.ipynb  transformerlens_breakdown.ipynb  visualization_examples.ipynb
probes/: README.md
scripts/: render_demo_animations.py
src/: ActivationStore.py
tests/: ActivationStore.py  conftest.py  test_activation_patching.py  test_activation_store.py  test_attribution_integrated_gradients.py  test_circuit_discovery_experiment.py  test_circuit_discovery_validation.py  test_circuit_graph.py  test_cli.py  test_experiments.py  test_feature_atlas.py  test_huggingface_wrapper.py  test_instrumentation.py  test_interventions.py  test_patching-interventions.py  test_patching_interventions.py  test_pipeline.py  test_sae.py  test_sae_experiment.py  test_sae_integration.py  test_steering.py  test_visualization.py  test_visualization_adapters.py
(+92 files in other folders)
