[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "glassboxllms"
version = "0.1.0"
description = "Open-source LLM interpretability library"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
viz = ["manim>=0.18.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["glassboxllms*"]
